# league-fan-assets

./: .gitignore  Cargo.toml  Justfile  LICENSE  README.md  bun.lockb  index.js  index.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml  publish-npm.yml  scheduled-data.yml  scheduled-publish.yml
bindings/: Augment.ts  BannerFlag.ts  BannerFrame.ts  Description.ts  DropChance.ts  Loot.ts  LootBundle.ts  LootItem.ts  LootRecipe.ts  LootTable.ts  LootTokenBankCard.ts  Overlay.ts  QuestSkinInfo.ts  Rarity.ts  RarityEnum.ts  Skin.ts  SkinAugments.ts  SkinLineId.ts  SkinType.ts  Skinlines.ts  SummonerEmote.ts  SummonerIconSet.ts  Tier.ts  WardSkin.ts
scripts/: build-data.ts  check-pack-size.mjs  publish-data.sh  publish.sh  sync-r2.sh
src/: catalog.ts  client.ts  error.rs  fetch_client.rs  index.ts  lib.rs  main.rs  middleware.rs  preludes.rs  r2client.rs  scraper.ts  types.ts  utils.ts
src/bindings/: Borders.ts  Chroma.ts  Content.ts  DescriptionInfo.ts  Layer.ts  Output.ts  Query.ts  RarityField.ts  RegionEnum.ts  RegionalDescription.ts  Skinline.ts  SummonerBanners.ts  SummonerIcon.ts  TypeField.ts  WardSkinSet.ts
src/client/: client_trait.rs  download_client.rs  fetch_client.rs  mod.rs  r2_client.rs
src/helpers/: rarity.ts  split-skin-id.ts  substitute.ts
src/loaders/: category.ts  http.ts
src/sources/: cdragon.ts  ddragon.ts  release.ts
src/transforms/: added.ts  index.ts  (+5 more)
test/: index.test.ts
tests/: client.mock.test.ts  cosmetics.test.ts  loot.test.ts  paths.test.ts  skins.transform.test.ts
(+21 files in other folders)
