[package]
name = "league-fan-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
reqwest = { version = "0.12.9", features = ["json"] }
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["fs", "macros", "rt-multi-thread"] }
