[package]
name = "league-fan-assets"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.92"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json"] }
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
simple_logger = "5.0.0"
tokio = { version = "1.41.0", features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
assertables = "9.3.0"
